# routes/user_router.go
@@ -16,8 +16,33 @@ func UserRouter(api *gin.RouterGroup) {
 	userService := services.NewUserService(userRepository)
 	userController := controllers.NewUserController(userService)
 
-	api.POST("/user", middlewares.Auth(authRepository), middlewares.AuthAccess(authRepository), userController.CreateUser)
-	api.GET("/users", middlewares.Auth(authRepository), middlewares.AuthAccess(authRepository), userController.GetAllUsers)
-	api.GET("/user/searchByEmail", middlewares.Auth(authRepository), middlewares.AuthAccess(authRepository), userController.GetUserByEmail)
-	api.GET("/user/:id", middlewares.Auth(authRepository), middlewares.AuthAccess(authRepository), userController.GetUserByID)
+	api.POST(
+		"/user",
+		middlewares.Auth(authRepository),
+		middlewares.AuthAccess(authRepository),
+		userController.CreateUser,
+	)
+	api.GET(
+		"/users",
+		middlewares.Auth(authRepository),
+		middlewares.AuthAccess(authRepository),
+		userController.GetAllUsers,
+	)
+	api.GET("/user/searchByEmail",
+		middlewares.Auth(authRepository),
+		middlewares.AuthAccess(authRepository),
+		userController.GetUserByEmail,
+	)
+	api.GET(
+		"/user/:id",
+		middlewares.Auth(authRepository),
+		middlewares.AuthAccess(authRepository),
+		userController.GetUserByID,
+	)
+	api.PUT(
+		"/user/:id",
+		middlewares.Auth(authRepository),
+		middlewares.AuthAccess(authRepository),
+		userController.UpdateUser,
+	)
 }
